--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "Xapi",
+  "name": "xapi",
   "version": "1.0.1",
   "description": "A quick start template to kickstart a Node Express Api application using Sequelize ORM, Mocha Cha chai-http as test suites",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets env",
+    "start": "nodemon ./app/index.js --exec babel-node --presets env",
     "test": "nyc --reporter=html --reporter=text ./node_modules/mocha/bin/mocha --recursive --require babel-register --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andela-git/senplate.git"
+    "url": "git+https://github.com/waleCloud/xapi.git"
   },
   "bin": {
     "coveralls": "./bin/coveralls.js"
@@ -32,15 +32,15 @@
   "author": "Wale Ayandiran",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/andela-git/senplate/issues"
+    "url": "https://github.com/waleCloud/xapi/issues"
   },
-  "homepage": "https://github.com/andela-git/senplate#readme",
+  "homepage": "https://github.com/waleCloud/xapi#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.44.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -54,6 +54,6 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.3",
-    "nyc": "^12.0.2"
+    "nyc": "^14.1.1"
   }
 }
